
Version 0.6-2 (??-Apr-2011, Rev. ???)
=====================================

- New dependency: xtable 

- Indefinite ProgressPanel is shown while calculating.

- Calculations can be interrupted and canceled.

- Improved / updated gMCP-LaTeX-Report now in the GUI.

- Fixed a major bug which prevented saving/loading in the GUI.

Version 0.6-1 (09-Apr-2011, Rev. 589)
=====================================

- We use the library JLaTeXMath for edge labeling.

- Eye candy (for example the edge labels have now a border and 
  are always drawn at the end).
  
- The settings for correlation are moved to the p-value panel.

- The value for epsilon is optionally either asked every time
  or the value from the option panel is used.

- Changed the order of the buttons in the main button panel.

- GUI is remembering the last 4 used R objects / files. 

- Since r-forge has rJava problems at the moment and does
  not provide gMCP builds, we pushed 0.6-1 early to CRAN. 

 43 files changed, 666 insertions(+), 248 deletions(-)

Version 0.6-0 (06-Apr-2011, Rev. 547)
=====================================

- The GUI supports edges with variables (although sum checking of
  outgoing edges is disabled then till values are assigned to the
  variables.)
  
- gMCP has new arguments: approxEps=TRUE, eps=10^(-4)
  
- New function: substituteEps

- Changes in class graphMCP:
 
  - Attribute for node weights is called "nodeWeight".  

  - New mandatory edge attribute "epsilon".
  
- graph2latex has the new arguments "labelTikZ", "tikzEnv" and 
  "offset".
  
 40 files changed, 599 insertions(+), 339 deletions(-)

Version 0.5-0 (28-Mar-2011, Rev. 525)
=====================================

- We use weights instead of direct alpha allocation in the graphs.
  This causes major API changes:

  - gMCP and many other functions have an argument alpha with an
    default 0.05

  - getAlpha is now called getWeights since it returns the weights
